[package]
name = "presents"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4.6", features = ["headers", "ws"] }
futures = "0.3.21"
headers = "0.3.7"
once_cell = "1.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
tower-http = { version = "0.2.3", features = ["trace"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }

[features]
